# pr_prototype_work

./: .flake8  .pre-commit-config.yaml  README.md  docker-compose-sync.yml  docker-compose.yml  docker-sync.yml  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  pythonpublish.yml
docs/: conf.py  contributing.md  index.rst  pull_request_template.md
docs/_templates/: layout.html
docs/how_to/: sphinx_docs.md
pytemplate/: __init__.py  fibonacci.py
tests/: test_fibonacci.ipynb  upload_test_notebook.ipynb
