[metadata]
name = pytemplate
description = Bare-bones Python package that serves as a template for other Kinaxis Python packages.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/rubikloud/pytemplate
author = Kinaxis Engineering
author_email = engineering@kinaxis.com

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bz2file
python_requires = >=3.8
use_scm_version = True
setup_requires =
    setuptools_scm

[options.packages.find]
exclude =
    tests
    docs

[options.extras_require]
tests =
    pytest >= 6.2.2
    pytest-cov
    coverage
linter =
    black
    flake8
    flake8-broken-line
    flake8-builtins
    flake8-bugbear
    flake8-comprehensions
    flake8-eradicate
    flake8-pep3101
    flake8-print
    flake8-quotes
    flake8-logging-format
    isort
docs =
    awscli
    m2r2
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-napoleon

[bdist_wheel]
universal = 1
